--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 p {
-  font-size: 20px;
+    font-size: 20px;
 }
 
 h1 {
@@ -7,7 +7,80 @@ h1 {
   }
 
 h2 {
-        font-size: 30px;
+    font-size: 30px;
+}
+
+#button16 {
+    background-color: #B921E6;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+#button18 {
+  background-color: #DA04E6;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+#button24 {
+  background-color: #9D08FC;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+#stop {
+    background-color: #F02E1D;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+#A {
+    border: none;
+    border-radius: 4px;
+    padding: 5px;
+    width: 100px;
+}
+
+#B {
+  border: none;
+  border-radius: 4px;
+  padding: 5px;
+  width: 100px;
+}
+
+#C {
+  border: none;
+  border-radius: 4px;
+  padding: 5px;
+  width: 100px;
 }
 
 .center {
